--- a/index.html
+++ b/index.html
@@ -48,5 +48,5 @@
 </table>
 </div>
 </body>
-<script type="module" src="main.js"></script>
+<script type="module" src="script.js"></script>
 </html>
