--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div id="container">
 <h1>Cash Register App</h1>
 <p>Enter the amount and cash given by customer and know minimum number of notes to return</p>
-<lable for="bill-amt">Bill Amount</lable>
+<label for="bill-amt">Bill Amount</label>
 <input type="number" id="bill-amt"/>
-<lable id="cash-amt">cash</lable>
+<label for="cash-amt">cash</label>
 <input type="number" id="cash-amt"/>
 <button id="click-bill">Check</button>
 <p id="error-mess"></p>
